fixed sped.jpg image

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     font-style: italic;
     font-family: fantasy;
     text-align:left;
-    background-image: url("images\sped.jpg");
+    background-image: url("images/sped.jpg");
     background-attachment:fixed;
     margin:auto;
     padding:auto;
