f*ck this centering, i'll just play with .css to make text more beautiful (read - awfull)

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ textarea::placeholder{
     font-size: 3vw;
     text-align: center;
     color:white;
-    text-decoration: darkviolet overline;
+    text-shadow: 1vw 1vw 5px black;
 }
 
 .srodek{
